--- a/src/test/index.html
+++ b/src/test/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="test">hello</div>
-    <script type="text/javascript" src="/static/testb.js"></script>
+    <script type="text/javascript" src="/static/js/test.js"></script>
   </body>
 </html>
