--- a/src/mobileBoilerplate/index.html
+++ b/src/mobileBoilerplate/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <!-- 内容 -->
-
+    <div class="main"></div>
     <!-- webpack js bundle -->
-    <script type="text/javascript" data-rewrite="js/mobileBolierplate_*.js" src="/static/js/mobileBolierplate.js"></script>
+    <script type="text/javascript" data-rewrite="js/mobileBolierplate_*.js" src="/static/js/mobileBoilerplate.js"></script>
   </body>
 </html>
