--- a/src/mobileBoilerplate/index.html
+++ b/src/mobileBoilerplate/index.html
@@ -11,12 +11,12 @@
     <meta name="msapplication-tap-highlight" content="no">
     
     <!-- webpack style bundle -->
-    <link rel="stylesheet" type="text/css" data-rewrite="css/mobileBolierplate_*.css" href="">
+    <link rel="stylesheet" type="text/css" data-rewrite="css/mobileBoilerplate_*.css" href="">
   </head>
   <body>
     <!-- 内容 -->
     <div class="main"></div>
     <!-- webpack js bundle -->
-    <script type="text/javascript" data-rewrite="js/mobileBolierplate_*.js" src="/static/js/mobileBoilerplate.js"></script>
+    <script type="text/javascript" data-rewrite="js/mobileBoilerplate_*.js" src="/static/js/mobileBoilerplate.js"></script>
   </body>
 </html>
