--- a/static/mobileBoilerplate/index.html
+++ b/static/mobileBoilerplate/index.html
@@ -9,11 +9,14 @@
 
     <!-- Disable tap highlight on IE -->
     <meta name="msapplication-tap-highlight" content="no">
-
-    <link rel="stylesheet" type="text/css"  href="/static/css/mobileBolierplate_0bc2510adb86feef12e0d7e261e63c78.css">
+    
+    <!-- webpack style bundle -->
+    <link rel="stylesheet" type="text/css" data-rewrite="css/mobileBoilerplate_*.css" href="">
   </head>
   <body>
     <!-- 内容 -->
-    <script type="text/javascript"  src="/static/js/mobileBolierplate_4bee5b0a2ab8f765580f.js"></script>
+    <div class="main"></div>
+    <!-- webpack js bundle -->
+    <script type="text/javascript"  src="/static/js/mobileBoilerplate_1811e7606869e303f982.js"></script>
   </body>
 </html>
